Feat : 학교 홈페이지 리뉴얼로인한 교직원 스크랩 및 스크랩간 직위 추가 (#223)
* fix : 교직원 스크랩할 페이지 base url 변경(학과 홈페이지)

* remove : 리빙디자인, 커뮤니케이션 디자인 파서 삭제(미사용)

* fix : 학과 교직원 페이지 파서 수정(부동산 학과 제외)

* fix : 부동산 학과 파싱로직 변경

* feat : 교직원 스크랩시 필요한 정보 변경

* feat : 전체 학과 siteId, siteName 수정

* feat : 교직원 정보 지원 유무 검증을 위한 메서드 추가

* feat : siteId, siteName 필드값 추가로 인한 getter 변경

* remove : 교직원 스크랩 API Client 통합에 따른 미사용 클래스 삭제

* feat : 학과 교직원 스크랩 API Client 로직 변경

* feat : 교직원 스크랩 과정 간 직위정보 추가

* feat : StaffUpdater 스크랩 로직 수정

* feat : 수의예과, 수의학과 중복 교직원 정보 제거를 위한 distinct처리

* feat : test용 html 파일 추가(컴퓨터공학부, 부동산학과) 및 legacy 파일 이동

* test : 학과 교직원 정보 스크랩 로직 테스트코드 작성

* fix : entity position 추가 전 로직으로 수정

* remove : legacy StaffScraperTest 삭제

* remove : 불필요 주석 제거

* test : MockServerSupport 객체 생성

* remove : 불필요 DTO 제거

* test : 신규 StaffScraperTest 추가

* remove : 불필요 import문 삭제

* feat : StaffDTO identifier() 메서드 추가

* feat : 수의과대학 교직원 스크랩시 수의예과만 스크랩 하도록 변경

* feat : 전화번호 유틸 클래스 분리

* feat : 이메일 유틸 클래스 분리

* test : 이메일 유틸 클래스 테스트 추가

* teat : 전화번호 유틸 클래스 테스트 추가

* feat : Staff DB position column 추가

* feat : Staff & StaffDTO position 추가

* feat : StaffDTO position 비교 로직 추가

* feat : 이메일 valid 정책 수정(공백 허용)

* feat : Staff 업데이트시 직위 추가

* feat : 교직원 스크랩 스케쥴링 월 1회 활성화

* feat : EmailSupporter & PhoneNumberSupporter 검증/변환 로직 분리

* feat : EmailSupporter & PhoneNumberSupporter 검증 메서드 테스트 추가

* feat : StaffDTO 객체 생성 간 email, phone 검증, 변환하도록 수정

* refactor : 불필요 import문 제거

* refactor : 테스트 클래스 및 메서드 public 키워드 제거

* refactor : 주석 TODO 키워드 제거 및 replaceAll() -> replace() 변경

* feat : 직위 추가에 따른 StaffUpdate 로직 변경

* refactor : 람다 함수 사용 간 불필요 괄호 제거

* feat : 전화번호 없을 경우 기본 저장 값 변경("-" -> "")

* fix : StaffUpdate 로직 변경에 따른 Staff 도메인 테스트 변경(identifier(), 전화번호)

* test : StaffUpdate 로직 변경에 따른 테스트 코드 변경(identifier(), 전화번호, 직위)

* refactor : 소나큐브 이슈 수정(변수명 컨벤션)

* remove : 불필요 출력문 제거

* feat : 교직원 스크랩 스케쥴링 시간 1분 변경.(테스트 후 30분 되돌릴